# TimescaleDB-Dash-Flask

./: .env_template  .flake8  .flaskenv  Dockerfile  Dockerfile.dev  README.md  docker-compose.pgadmin.yml  docker-compose.timescale.yml  entrypoint.sh  gunicorn-cfg.py  gunicorn_starter.sh  postgresql_custom.conf  pyproject.toml  requirements.txt  wsgi.py
.devcontainer/: devcontainer.json  docker-compose.yml
app/: __init__.py  dash_setup.py  database.py
app/dashapp/: callbacks.py  layout.py
app/templates/: index.html
